# dbotu

./: .travis.yml  Makefile  Makefile.in  README.md  common.cpp  common.h  configure  configure.ac  dbotu.cpp  dbotu.h  dbotu_opts.cpp  dbotu_opts.h  example_test.fasta  fake_data.txt  levenshtein.h
data/: otu_table.tsv
src/: Makefile.am  Makefile.in  common.cpp  common.h  dbotu.cpp  dbotu_opts.cpp  dbotu_opts.h  levenshtein.h  version.h
